Added the port number to the yml file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,7 +50,8 @@ logging:
 #
 # Server Properties
 #
-server:   
+server:  
+    port: ${EVS_SERVER_PORT:8080} 
     contextPath: /            
     session:
         persistent: false    
