--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
-apply plugin: 'war'
+/*apply plugin: 'war'*/
 
 group = "gov.nih.nci.evs.api"
 version = "1.0.0-SNAPSHOT"
@@ -88,7 +88,7 @@ dependencies {
     compile 'org.projectlombok:lombok'
      
      
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    /*providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'*/
 
     /*
      * This dependency is included to auto-configure class HttpComponentsClientHttpRequestFactory
@@ -111,6 +111,9 @@ dependencies {
 jar {
     baseName = project.name
     version =  project.version
+    manifest {
+        attributes 'Main-Class': 'main.java.gov.nih.nci.evs.api.Application'
+    }
 }
 
 test {
