Added new dependency.

--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ dependencies {
    
     compile 'org.springframework.boot:spring-boot-starter-web'       
     compile 'org.springframework.boot:spring-boot-devtools'
-    compile 'org.projectlombok:lombok'
+    compile 'org.apache.commons:commons-lang3:3.4'
     compile "io.springfox:springfox-swagger2:$swaggerversion" 
     compile "io.springfox:springfox-swagger-ui:$swaggerversion"
      
