--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,5 +67,6 @@ nci:
       readTimeout: ${STARDOG_READ_TIMEOUT:10000}
       connectTimeout: ${STARDOG_CONNECT_TIMEOUT:10000}
       graphName: ${STARDOG_GRAPH_NAME:REPLACE_WITH_GRAPH_NAME} 
-      owlfileName: ${STARDOG_OWL_FILENAME:REPLACE_WITH_OWL_FILENAME}     
+      owlfileName: ${STARDOG_OWL_FILENAME:REPLACE_WITH_OWL_FILENAME}
+      populateCacheCron: ${STARDOG_POPULATE_CACHE_CRON:0 0 0 * * *}     
 
