--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -82,7 +82,7 @@ nci:
       forcePopulateCache: ${FORCE_POPULATE_CACHE:N}  
     elasticsearch:
       server:
-        url: ${EVS_ELASTIC_SEARCH_SERVER_URL:http://localhost:9200/concept_flat_full/concept/_search}
+        url: ${EVS_ELASTIC_SEARCH_SERVER_URL:http://localhost:9200/concept_flat_full_nested/concept/_search}
       query: 
         shortsourcefields: |
             [
@@ -100,14 +100,18 @@ nci:
             "label.exact^100",           
             "displayName.exact^100",          
             "preferredName.exact^100",  
-            "synonyms.termName.exact^95", 
+            "synonyms_plain.exact^95", 
             "definitions.description.exact^70", 
             "semanticTypes.exact^65",  
             "additionalProperties.name.exact^50", 
             "additionalProperties.value.exact^50", 
             "superconcepts.label.exact^45", 
             "subconcepts.label.exact^45"  
-            ]          
+            ]
+        exactstartswithsynonymfields: |
+             [
+               "synonyms.termName.exact^100"
+             ]          
         containsfields: |
              [
               "code^100",
@@ -123,9 +127,9 @@ nci:
               "definitions.description^70",
               "definitions.description.ngram^30",
               "semanticTypes^10",       
-              "synonyms.termName^95",
-              "synonyms.termName.exact^95",
-              "synonyms.termName.ngram^50",
+              "synonyms_plain^95",
+              "synonyms_plain.exact^95",
+              "synonyms_plain.ngram^50",
               "additionalProperties.name^20",
               "additionalProperties.name.ngram^10",
               "additionalProperties.value^20",
@@ -133,7 +137,13 @@ nci:
               "superconcepts.label^20",
               "superconcepts.label.ngram^10",
               "subconcepts.label^20",
-              "subconcepts.label.ngram^10"]    
+              "subconcepts.label.ngram^10"] 
+        containssynonymfields: |
+               [
+                   "synonyms.termName^100",
+                   "synonyms.termName.exact^100",
+                   "synonyms.termName.ngram^50"
+               ]          
         andorfields: |
               [
                "code^100",
@@ -143,15 +153,20 @@ nci:
                "displayName.exact^100",
                "preferredName^100",
                "preferredName.exact^100",
-               "synonyms.termName^95",
-               "synonyms.termName.exact^95",
-               "definitions.description^70",
-               "semanticTypes^65",
-               "additionalProperties.name^50",
-               "additionalProperties.value^50",
-               "superconcepts.label^45",
-               "subconcepts.label^45"
-              ]          
+               "synonyms_plain^95",
+               "synonyms_plain.exact^95",
+               "definitions.description^50",
+               "semanticTypes^45",
+               "additionalProperties.name^45",
+               "additionalProperties.value^45",
+               "superconcepts.label^25",
+               "subconcepts.label^25"
+              ]  
+        andorsynonymfields: |
+              [
+                 "synonyms.termName^100",
+                 "synonyms.termName.exact^100"
+              ]              
         P108Default: |
               "preferredName^100",
               "preferredName.exact^100",
@@ -171,14 +186,14 @@ nci:
               "displayName.exact^100",
               "displayName.ngram^50",
         P90Default: |
-              "synonyms.termName^95",
-              "synonyms.termName.exact^95",
+              "synonyms_plain^95",
+              "synonyms_plain.exact^95",
         P90Exact: |
-              "synonyms.termName.exact^95",
+              "synonyms_plain.exact^95",
         P90Contains: |
-              "synonyms.termName^95",
-              "synonyms.termName.exact^95",
-              "synonyms.termName.ngram^50",
+              "synonyms_plain^95",
+              "synonyms_plain.exact^95",
+              "synonyms_plain.ngram^50",
         NHC0Default: |
               "code^100",
         NHC0Exact: |
@@ -199,11 +214,13 @@ nci:
               "preferredName.exact": {},
               "definitions.description.exact": {},
               "semanticTypes.exact": {},
-              "synonyms.termName.exact": {},
+              "synonyms_plain.exact": {},
               "additionalProperties.name.exact": {},
               "additionalProperties.value.exact": {},
               "superconcepts.label.exact": {},
               "subconcepts.label.exact": {}
+        highlightsynonymexact: |
+               "synonyms.termName.exact": {}      
         highlightcontains: |
               "code": {},
               "label.ngram": {},
@@ -211,11 +228,13 @@ nci:
               "preferredName.ngram": {},
               "definitions.description.ngram": {},
               "semanticTypes": {},
-              "synonyms.termName.ngram": {},
+              "synonyms_plain.ngram": {},
               "additionalProperties.name.ngram": {},
               "additionalProperties.value.ngram": {},
               "superconcepts.label.ngram": {},
-              "subconcepts.label.ngram": {}        
+              "subconcepts.label.ngram": {}  
+        highlightsynonymcontains: |
+               "synonyms.termName.ngram": {}           
         highlightandor: | 
                "code": {},
                "label": {},
@@ -223,11 +242,13 @@ nci:
                "preferredName": {},
                "definitions.description": {},
                "semanticTypes": {},
-               "synonyms.termName": {},
+               "synonyms_plain": {},
                "additionalProperties.name": {},
                "additionalProperties.value": {},
                "superconcepts.label": {},
-               "subconcepts.label": {}       
+               "subconcepts.label": {}
+        highlightsynonymandor: |
+                "synonyms.termName": {}             
         mainQuery: |
               {
                   "_source": ${sourcefields},                  
@@ -263,7 +284,50 @@ nci:
                       }
                     }
                   }
-                }          
+                } 
+        mainSynonymQuery: |
+                {
+                  "_source": ${sourcefields},                  
+                  "from": ${fromRecord},
+                  "size": ${pageSize},
+                  "query": {
+                     "nested": {
+                        "path": "synonyms",
+                           "query": {
+                              "bool": {
+                                 "must": [
+                                    { "multi_match" : {
+                                     "query": "${term}",
+                                      ${operator}
+                                     "fields":     ${fields}
+     
+                                     }},
+                                    { "match" : {"synonyms.termSource" : "${synonymSource}"} }
+                                    ]
+                    
+                    }
+                    }                      
+                    }
+                  },
+                  "highlight": {
+                    ${highlightTags}
+                    "fields": {
+                      ${highlightFields}         
+                    }
+                  },
+                  "aggs": {
+                    "isDisease": {
+                      "terms": {
+                        "field": "isDisease"
+                      }
+                    },
+                    "isBiomarker": {
+                      "terms": {
+                        "field": "isBiomarker"
+                      }
+                    }
+                  }
+                }                
         mainQueryWithoutHighlights: | 
                 {
                   "_source": ${sourcefields},                  
@@ -293,7 +357,44 @@ nci:
                       }
                     }
                   }
-                }    
+                } 
+        mainSynonymQueryWithoutHighlights: |
+                {
+                  "_source": ${sourcefields},                  
+                  "from": ${fromRecord},
+                  "size": ${pageSize},
+                  "query": {
+                     "nested": {
+                        "path": "synonyms",
+                           "query": {
+                              "bool": {
+                                 "must": [
+                                    { "multi_match" : {
+                                     "query": "${term}",
+                                      ${operator}
+                                     "fields":     ${fields}
+     
+                                     }},
+                                    { "match" : {"synonyms.termSource" : "${synonymSource}"} }
+                                    ]
+                    
+                    }
+                    }                      
+                    }
+                  },
+                  "aggs": {
+                    "isDisease": {
+                      "terms": {
+                        "field": "isDisease"
+                      }
+                    },
+                    "isBiomarker": {
+                      "terms": {
+                        "field": "isBiomarker"
+                      }
+                    }
+                  }
+                }                  
         highlightTags: |
             "pre_tags": [
                       "<font color='#428bca'><strong>"
