added synonym termGroup search

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -328,8 +328,8 @@ nci:
                                       ${operator}
                                      "fields":     ${fields}
      
-                                     }},
-                                    { "match" : {"synonyms.termSource" : "${synonymSource}"} }
+                                     }}
+                                     ${synonymSource}
                                     ]
                     
                     }
@@ -444,8 +444,8 @@ nci:
                                       ${operator}
                                      "fields":     ${fields}
      
-                                     }},
-                                    { "match" : {"synonyms.termSource" : "${synonymSource}"} }
+                                     }} 
+                                     ${synonymSource}
                                     ]
                     
                     }
